--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="summary_location_sticky_min_improvement">Minimum score improvement to update while sticky. (%s)</string>
     <string name="summary_general_device_name">The name used in recorded file names, currently set to: %s</string>
     <string name="title_activity_load_test">LoadTestActivity</string>
+    <string name="title_activity_search_shop">SearchShopActivity</string>
 
 </resources>
